--- a/github/workflows/github-actions-ec2.yml
+++ b/github/workflows/github-actions-ec2.yml
@@ -2,7 +2,7 @@
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   deploy:
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Deploy to Server 1
-        uses: easingthemes/ssh-deploy@master
+        uses: easingthemes/ssh-deploy@main
         env:
           SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
           REMOTE_HOST: ${{ secrets.HOST_DNS }}
